feature/registration (#21)
* feature/registration
